@@ -1,7 +1,7 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
 	<bean id="manager" class="edu.mcw.rgd.dataload.ImportManager">
-        <property name="version" value="phenotype-annotation-pipeline  -- build Nov 19, 2024" />
+        <property name="version" value="phenotype-annotation-pipeline  -- build Jan 02, 2025" />
 	</bean>
 
     <bean id="mgiPhenotype" class="edu.mcw.rgd.dataload.MGIPhenotypeImporter">
