@@ -27,6 +27,12 @@
             <PatternLayout pattern="%m%n"/>
             <ThresholdFilter level="INFO" onMatch="ACCEPT" onMismatch="DENY"/>
         </File>
+        <RollingFile name="dbg_mouse" append="true" fileName="logs/dbg_mouse.log" filePattern="logs/dbg_mouse.log.%d{yyyy-MM}">
+            <PatternLayout pattern="%d{yyyy-MM-dd HH:mm:ss} %p [%c] - %m%n"/>
+            <Policies>
+                <TimeBasedTriggeringPolicy interval="1"/>
+            </Policies>
+        </RollingFile>
 
         <RollingFile name="inserted_annots" append="true" fileName="logs/inserted_annots.log" filePattern="logs/inserted_annots.log.%d{yyyy-MM}">
             <PatternLayout pattern="[%d{yyyy-MM-dd HH:mm:ss}] - %m%n"/>
@@ -62,7 +68,7 @@
         <Logger name="status_mouse" level="debug" additivity="false">
             <AppenderRef ref="status_mouse" level="info"/>
             <AppenderRef ref="summary_mouse" level="info"/><!-- human readable -->
-            <!--<AppenderRef ref="detail"/>-->
+            <AppenderRef ref="dbg_mouse"/>
             <AppenderRef ref="Console" level="info"/>
         </Logger>
 
